--- a/src/components/Welcome.css
+++ b/src/components/Welcome.css
@@ -1,11 +1,15 @@
 .welcome{
     text-align: center;
+    background-image: url(../../public/assets/quiz_bg.png);
+    min-height: 100vh;
+    box-shadow: 0 4px 8px 0;
 }
 .button{
     text-align: center;
     border-radius: 50%;
     width: 80px;
     height: 80px;
+    margin-top: 82vh;
     font-size: 50px;
     color: white;
     background-image: linear-gradient(to bottom, #16a085, #2ecc71);
