--- a/src/components/Welcome.css
+++ b/src/components/Welcome.css
@@ -1,24 +1,26 @@
 .welcome{
     text-align: center;
-    background-image: url(../../public/assets/quiz_bg.png);
     min-height: 100vh;
-    box-shadow: 0 4px 8px 0;
+    display: flex;
+    flex-direction: column;
 }
 .button{
     text-align: center;
     border-radius: 50%;
-    width: 80px;
-    height: 80px;
-    margin-top: 82vh;
+    width: 180px;
+    height: 180px;
+    margin-top: 20vh;
     font-size: 50px;
     color: white;
-    background-image: linear-gradient(to bottom, #16a085, #2ecc71);
-    border: none;
+    background-color: var(--clr-bg);
+    border-color: var(--clr-neon);
     cursor: pointer;
     -webkit-transition-duration: 0.4s; 
     transition-duration: 0.4s;
 }
-
+.button:hover{
+  background-color: var(--clr-neon);
+}
 
 /*Bounce*/
 @keyframes kreep {
@@ -36,4 +38,38 @@ h1.kreep {
 
 h1.kreep:hover {
   animation: none;
+}
+
+#courses{
+  text-align: center;
+  margin-left: 35%;
+  font-size: 60px;
+  font-family: 'Shizuru', cursive;
+  width: 520px;
+  height: 150px;
+  border-radius: 40px;
+  color: var(--clr-neon);
+  background-color: var(--clr-bg);
+  border-color: var(--clr-neon);
+  box-shadow: var(--clr-neon) 0px 4px 6px 0;
+  cursor: pointer;
+}
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px var(--clr-bg); 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px var(--clr-neon); 
+}
+.title{
+  font-family: 'Shizuru', cursive;
+  font-size: 8rem;
+  margin-top: -20px;
+  margin-bottom: 100px;
 }
