--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -2,6 +2,9 @@
     padding: 5%;
 }
 .card_body > h1{
+    margin-top: -2%;
+    margin-bottom: 6%;
+    text-align: center;
     font-family: 'Shizuru', cursive;
     font-weight: 400;
     font-size: 80px;
@@ -47,4 +50,19 @@
     border: none;
     color: white;
     cursor: pointer;
+    transition: 3s;
+}
+.next:hover{
+    background-color: green;
+}
+
+@media screen and (max-width: 600px){
+    .card_body > h1{
+        font-weight: 400;
+        font-size: 150px;
+        text-align: center;
+    }
+    .card_body > h4{
+        font-size: 80px;
+    }
 }
