--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -7,7 +7,7 @@
     text-align: center;
     font-family: 'Shizuru', cursive;
     font-weight: 400;
-    font-size: 80px;
+    /* font-size: 80px; */
 }
 .card_body > h4{
     font-family: 'Secular One', sans-serif;
@@ -50,7 +50,7 @@
     border: none;
     color: white;
     cursor: pointer;
-    transition: 3s;
+    transition: 2s;
 }
 .next:hover{
     background-color: green;
