--- a/src/components/Score.module.css
+++ b/src/components/Score.module.css
@@ -7,6 +7,7 @@ h1{
     font-family: 'Calibri';
 }
 .comp{
+    font-size: 30px;
     border-radius: 20px;
     width: 200px;
     height: 200px;
@@ -14,6 +15,7 @@ h1{
     box-shadow: var(--clr-neon) 10px 10px;
 }
 .human{
+    font-size: 30px;
     border-radius: 20px;
     width: 200px;
     height: 200px;
