--- a/src/components/pages/Signin.module.css
+++ b/src/components/pages/Signin.module.css
@@ -4,11 +4,9 @@
 }
 
 .sawoContainer{
-  width: max-content;
-  height: 100%;
+  width: 100%;
+  height: 50%;
   margin-top: 10%;
-  margin-left: 30%;
-  box-shadow: 0 4px 4px 0;
 }
 
 
@@ -29,8 +27,14 @@
   border-radius: 10px;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 1180px) {
   .container{
       margin-top: 0%;
+  }
+  .sawoContainer{
+    margin-top: 35vh;
+    margin-left: 10%;
+    height: 70%;
+    width: 80%;
   }
 }
